--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,19 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for Employee Attendance Tracker",
+  "main": "server.js",
   "scripts": {
-     "start": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
